--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -318,6 +318,7 @@ kube-prometheus-stack:
 prometheus-adapter:
   enabled: true
   logLevel: 1
+  metricsRelistInterval: 3m
   prometheus:
     url: http://metrics-kube-prometheus-st-prometheus
   tolerations:
@@ -334,11 +335,11 @@ prometheus-adapter:
         containerQuery: |
           sum by (<<.GroupBy>>) (
             irate (
-                container_cpu_usage_seconds_total{<<.LabelMatchers>>,container!="",pod!=""}[60s]
+                container_cpu_usage_seconds_total{<<.LabelMatchers>>,container!="",pod!=""}[120s]
             )
           )
         nodeQuery: |
-          sum(1 - irate(node_cpu_seconds_total{<<.LabelMatchers>>, mode="idle"}[60s])) by (<<.GroupBy>>)
+          sum(1 - irate(node_cpu_seconds_total{<<.LabelMatchers>>, mode="idle"}[120s])) by (<<.GroupBy>>)
         resources:
           overrides:
             instance:
@@ -364,7 +365,7 @@ prometheus-adapter:
             pod:
               resource: pod
         containerLabel: container
-      window: 5m
+      window: 2m
 
 # Pushgateway
 prometheus-pushgateway:
