--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -224,7 +224,7 @@ fluentd:
 fluent-bit:
   enabled: false
 
-  image:
+  #image:
     #repository: public.ecr.aws/zero-downtime/fluent-bit
     #tag: 2.0.10
 
