--- a/charts/kubezero-network/templates/multus/daemonset.yaml
+++ b/charts/kubezero-network/templates/multus/daemonset.yaml
@@ -36,11 +36,11 @@ spec:
         - "--cni-version=0.3.1"
         resources:
           requests:
-            cpu: "100m"
-            memory: "64Mi"
-          limits:
-            #cpu: "100m"
-            memory: "256Mi"
+            cpu: "10m"
+            # memory: "64Mi"
+          # limits:
+            # cpu: "100m"
+            # memory: "256Mi"
         securityContext:
           privileged: true
           capabilities:
