--- a/charts/kubezero-storage/values.yaml
+++ b/charts/kubezero-storage/values.yaml
@@ -19,11 +19,11 @@ snapshotController:
 
   resources:
     requests:
-      memory: 16Mi
-      cpu: 20m
+      memory: 24Mi
+      cpu: 10m
     limits:
       memory: 64Mi
-      cpu: 100m
+      # cpu: 100m
 
 lvm-localpv:
   enabled: false
