fix: various minor fixes, istio ingress hardening configurable

--- a/charts/kubezero/templates/istio-ingress.yaml
+++ b/charts/kubezero/templates/istio-ingress.yaml
@@ -88,6 +88,10 @@ certificates:
 {{- end }}
 {{- end }}
 proxyProtocol: {{ default true (index .Values "istio-ingress" "proxyProtocol") }}
+{{- with (index .Values "istio-ingress" "hardening") }}
+hardening:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
 
 {{- end }}
 
