--- a/charts/kubezero/templates/istio-private-ingress.yaml
+++ b/charts/kubezero/templates/istio-private-ingress.yaml
@@ -83,6 +83,10 @@ certificates:
   {{- toYaml $cert.dnsNames | nindent 4 }}
 {{- end }}
 proxyProtocol: {{ default true (index .Values "istio-private-ingress" "proxyProtocol") }}
+{{- with (index .Values "istio-private-ingress" "hardening") }}
+hardening:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
 
 {{- end }}
 
