--- a/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
+++ b/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
@@ -32,10 +32,14 @@ spec:
           use_remote_address: true
           normalize_path: true
           merge_slashes: true
+          {{- if .Values.hardening.unescapeSlahes }}
           path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
+          {{- end }}
           common_http_protocol_options:
             idle_timeout: 3600s # 1 hour
+            {{- if .Values.hardening.rejectUnderscoresHeaders }}
             headers_with_underscores_action: REJECT_REQUEST
+            {{- end }}
           http2_protocol_options:
             max_concurrent_streams: 100
             initial_stream_window_size: 65536 # 64 KiB
