--- a/charts/kubezero-storage/jsonnet/rules.yaml
+++ b/charts/kubezero-storage/jsonnet/rules.yaml
@@ -1,4 +1,4 @@
 rules:
 - name: prometheus-rules
   url: file://rules/openebs-mixin-prometheusRules
-  condition: 'index .Values "lvm-localpv" "prometheus" "enabled"'
+  condition: 'and (index .Values "lvm-localpv" "enabled") (index .Values "lvm-localpv" "prometheus" "enabled")'
