--- a/charts/kubezero-storage/templates/lvm/prometheus-rules.yaml
+++ b/charts/kubezero-storage/templates/lvm/prometheus-rules.yaml
@@ -1,4 +1,4 @@
-{{- if index .Values "lvm-localpv" "prometheus" "enabled" }}
+{{- if and (index .Values "lvm-localpv" "enabled") (index .Values "lvm-localpv" "prometheus" "enabled") }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
