--- a/charts/clamav/Chart.yaml
+++ b/charts/clamav/Chart.yaml
@@ -1,18 +1,19 @@
 apiVersion: v2
 name: clamav
-description: Chart for deploying a ClamavD on kubernetes as statfulSet
+description: Chart for deploying a ClamAVd on Kubernetes as statfulSet
 type: application
-version: "0.2.0"
-appVersion: "1.1.0"
+version: "0.3.0"
+appVersion: "1.2.1"
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - clamav
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
-kubeVersion: ">= 1.25.0"
+kubeVersion: ">= 1.26.0"
