ClamAV Version bump. Enabled verbose by default

--- a/charts/clamav/templates/configmap.yaml
+++ b/charts/clamav/templates/configmap.yaml
@@ -10,7 +10,7 @@ data:
     LogTime yes
     LogClean yes
     LogSyslog no
-    LogVerbose no
+    LogVerbose yes
     LogFileMaxSize 0
     LogFile /dev/stdout
     DatabaseDirectory /var/lib/clamav
