--- a/charts/kubezero-storage/charts/lvm-localpv/charts/crds/templates/lvmsnapshot.yaml
+++ b/charts/kubezero-storage/charts/lvm-localpv/charts/crds/templates/lvmsnapshot.yaml
@@ -1,5 +1,6 @@
-
-
+{{- if .Values.lvmLocalPv.enabled -}}
+{{- $crdName := "lvmsnapshots.local.openebs.io" -}}
+{{- if (include "crdIsAbsent" (list $crdName)) -}}
 ##############################################
 ###########                       ############
 ###########   LVMSnapshot CRD     ############
@@ -83,3 +84,5 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end -}}
+{{- end -}}
