--- a/charts/kubezero-argo/templates/argo-cd/istio-authorization-policy.yaml
+++ b/charts/kubezero-argo/templates/argo-cd/istio-authorization-policy.yaml
@@ -16,7 +16,7 @@ spec:
   - from:
     - source:
         notIpBlocks:
-        {{- toYaml .Values.istio.ipBlocks | nindent 8 }}
+        {{- toYaml (index .Values "argo-cd" "istio" "ipBlocks") | nindent 8 }}
     to:
     - operation:
         hosts: [{{ index .Values "argo-cd" "configs" "cm" "url" | quote }}]
