--- a/charts/kubezero-storage/templates/k8up/crds.yaml
+++ b/charts/kubezero-storage/templates/k8up/crds.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.k8up.enabled }}
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -14420,3 +14421,4 @@ spec:
       storage: true
       subresources:
         status: {}
+{{- end }}
