feat: logging module version bumps

--- a/charts/kubezero-logging/charts/fluent-bit/templates/tests/test-connection.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/tests/test-connection.yaml
@@ -5,16 +5,19 @@ metadata:
   name: "{{ include "fluent-bit.fullname" . }}-test-connection"
   namespace: {{ default .Release.Namespace .Values.testFramework.namespace }}
   labels:
-    {{- include "fluent-bit.labels" . | nindent 4 }}
+    helm.sh/chart: {{ include "fluent-bit.chart" . }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
-    "helm.sh/hook": test-success
+    helm.sh/hook: test
+    helm.sh/hook-delete-policy: hook-succeeded
 spec:
   containers:
     - name: wget
       image: {{ include "fluent-bit.image" .Values.testFramework.image | quote }}
       imagePullPolicy: {{ .Values.testFramework.image.pullPolicy }}
-      command: ['wget']
-      args: ['{{ include "fluent-bit.fullname" . }}:{{ .Values.service.port }}']
+      command: ["sh"]
+      args: ["-c", "wget -O- {{ include "fluent-bit.fullname" . }}:{{ .Values.service.port }}"]
   {{- with .Values.imagePullSecrets }}
   imagePullSecrets:
     {{- toYaml . | nindent 4 }}
