fix: disable feature flag for now

--- a/charts/kubezero-network/values.yaml
+++ b/charts/kubezero-network/values.yaml
@@ -84,6 +84,11 @@ cilium:
     tolerations:
     - key: node-role.kubernetes.io/control-plane
       effect: NoSchedule
+    # the operator removes the taints,
+    # so we need to break chicken egg on single controller
+    - key: node.cilium.io/agent-not-ready
+      effect: NoSchedule
+
     nodeSelector:
       node-role.kubernetes.io/control-plane: ""
     prometheus:
