fix: make Jaeger work again

--- a/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
+++ b/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
@@ -24,7 +24,7 @@ spec:
             volumeMounts:
             - name: host
               mountPath: /host
-              readOnly: true
+              #readOnly: true
             - name: workdir
               mountPath: /tmp
             env:
