--- a/charts/kubezero/templates/telemetry.yaml
+++ b/charts/kubezero/templates/telemetry.yaml
@@ -30,6 +30,11 @@ opensearch:
     {{- end }}
   {{- end }}
 
+  {{- with .Values.telemetry.opensearch.settings }}
+  settings:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+
   prometheus: {{ .Values.metrics.enabled }}
 
 {{- end }}
